--- a/css/r3-styles.css
+++ b/css/r3-styles.css
@@ -59,7 +59,7 @@ p {
 
 /* Estilos para el modal */
 .modal {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100vh;
   top: 0;
